# KolesnikForNetologia

./: Leson5Task2.cpp  Lesson1Task1.cpp  Lesson5Task4.cpp  Lesson8Task1.cpp  README.md
Block4/Lesson1/: Lesson1Task1.cpp  Lesson1Task2.cpp  Lesson1Task3.cpp
Block4/Lesson2/: Lesson2Task1.cpp  Lesson2Task2.cpp
Block4/Lesson3/: Lesson3Task1.cpp  Lesson3Task2.cpp
Block4/Lesson9/Task2/: CMakeLists.txt
Block4/Lesson9/Task2/include/: EquilateralTriangle.h  Figure.h  IsoscelesTriangle.h  Parallelogram.h  Quadrilateral.h  Rectangle.h  Rhombus.h  RightTriangle.h  Square.h  Triangle.h
Block4/Lesson9/Task2/src/: EquilateralTriangle.cpp  IsoscelesTriangle.cpp  Parallelogram.cpp  Quadrilateral.cpp  Rectangle.cpp  Rhombus.cpp  RightTriangle.cpp  Square.cpp  Triangle.cpp  main.cpp
GameLife/: Live.cpp
Lesson 2/: Lesson2Task1.cpp  Lesson2Task2.cpp
Lesson10/: Lesson10Task1.cpp  Lesson10Task2.cpp  Lesson10Task3.cpp
Lesson11/: Lesson11Task2.cpp
Lesson12/: Lesson12Task1.cpp  Lesson12Task2.cpp  Lesson12Task3.cpp  Lesson12Task4.cpp
Lesson3/: Lesson3Task1.cpp  Lesson3Task2.cpp  Lesson3Task3 fix.cpp  Lesson3Task3.cpp  Lesson3Task4 fix v.2.cpp  Lesson3Task4 fix.cpp  Lesson3Task4.cpp
Lesson4/: Lesson4Task1.cpp  Lesson4Task2.cpp  Lesson4Task3.cpp
Lesson5/: Leson5Task2.cpp  Lesson5Task1.cpp  Lesson5Task3.cpp  Lesson5Task4 v2.cpp
Lesson6/: Lesson6Task1.cpp  Lesson6Task2.cpp  Lesson6Task3.1.cpp  Lesson6Task3.cpp
Lesson7/: Lesson7Task1.cpp  Lesson7Task2.cpp
Lesson8/: Lesson8Task1.cpp  Lesson8Task2.cpp
Lesson9/: Lesson9Task1.cpp  Lesson9Task2.cpp  Lesson9Task3.cpp
(+62 files in other folders)
